--- a/templates/cloud-set-guest-password-centos.j2
+++ b/templates/cloud-set-guest-password-centos.j2
@@ -27,6 +27,10 @@ user=root
 DHCP_FOLDERS="/var/lib/dhclient/*"
 
 function cloud_set_guest_password() {
+    if [ -f /usr/bin/systemd-run ]
+    then
+      /usr/sbin/dhclient
+    fi
     password_received=0
     file_count=0
     error_count=0
