--- a/templates/cloud-set-guest-sshkey-centos.j2
+++ b/templates/cloud-set-guest-sshkey-centos.j2
@@ -30,6 +30,10 @@ keys_received=0
 file_count=0
 
 function cloud_set_guest_sshkey() {
+    if [ -f /usr/bin/systemd-run ]
+    then
+      /usr/sbin/dhclient
+    fi
     for DHCP_FILE in $DHCP_FOLDERS; do
         if [ -f $DHCP_FILE ]; then
             file_count=$((file_count+1))
