Fixing Ubuntu and Centos 7. Verified working.

--- a/templates/cloud-set-guest-password-centos.j2
+++ b/templates/cloud-set-guest-password-centos.j2
@@ -29,8 +29,22 @@ DHCP_FOLDERS="/var/lib/dhclient/*"
 function cloud_set_guest_password() {
     if [ -f /usr/bin/systemd-run ]
     then
-      /usr/sbin/dhclient
+      for DHCP_FILE in $DHCP_FOLDERS; do
+        if [ -f $DHCP_FILE ]; then
+            logger -t "cloud" "DHCP file exists. No need to restart dhclient"
+        else
+            logger -t "cloud" "DHCP file does not exist. Restarting dhclient"
+            DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
+            if [ -n $DHCLIENT_PID ]; then
+                  for CLIENTPID in $DHCLIENT_PID; do
+                    kill $CLIENTPID
+                  done
+            fi
+            /usr/sbin/dhclient
+        fi
+      done
     fi
+    
     password_received=0
     file_count=0
     error_count=0
