--- a/templates/firstboot.upstart.j2
+++ b/templates/firstboot.upstart.j2
@@ -5,4 +5,4 @@ description "set root sshkeys from CloudStack metadata"
 start on startup
 
 task
-exec /etc/init.d/firstboot-cloudstack
+exec /etc/init.d/firstboot-cloudstack start
