--- a/templates/set-guest-password.upstart.j2
+++ b/templates/set-guest-password.upstart.j2
@@ -5,4 +5,4 @@ description "set root password from CloudStack metadata"
 start on startup
 
 task
-exec /usr/share/cloudstack/cloudstack-set-guest-password
+exec /usr/share/cloudstack/cloudstack-set-guest-password start
