--- a/templates/set-guest-sshkey.upstart.j2
+++ b/templates/set-guest-sshkey.upstart.j2
@@ -5,4 +5,4 @@ description "set root sshkeys from CloudStack metadata"
 start on startup
 
 task
-exec /usr/share/cloudstack/cloudstack-set-guest-sshkey
+exec /usr/share/cloudstack/cloudstack-set-guest-sshkey start
