--- a/templates/cloud-set-guest-sshkey-centos.j2
+++ b/templates/cloud-set-guest-sshkey-centos.j2
@@ -32,8 +32,22 @@ file_count=0
 function cloud_set_guest_sshkey() {
     if [ -f /usr/bin/systemd-run ]
     then
-      /usr/sbin/dhclient
+      for DHCP_FILE in $DHCP_FOLDERS; do
+        if [ -f $DHCP_FILE ]; then
+            logger -t "cloud" "DHCP file exists. No need to restart dhclient"
+        else
+            logger -t "cloud" "DHCP file does not exist. Restarting dhclient"
+            DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
+            if [ -n $DHCLIENT_PID ]; then
+                  for CLIENTPID in $DHCLIENT_PID; do
+                    kill $CLIENTPID
+                  done
+            fi
+            /usr/sbin/dhclient
+        fi
+      done
     fi
+    
     for DHCP_FILE in $DHCP_FOLDERS; do
         if [ -f $DHCP_FILE ]; then
             file_count=$((file_count+1))
