Reworking to split out plays and register only systemd and upstart jobs for their respective OSes

--- a/templates/cloud-set-guest-password-centos.j2
+++ b/templates/cloud-set-guest-password-centos.j2
@@ -27,23 +27,22 @@ user=root
 DHCP_FOLDERS="/var/lib/dhclient/*"
 
 function cloud_set_guest_password() {
-    if [ -f /usr/bin/systemd-run ]
-    then
-      for DHCP_FILE in $DHCP_FOLDERS; do
-        if [ -f $DHCP_FILE ]; then
-            logger -t "cloud" "DHCP file exists. No need to restart dhclient"
-        else
-            logger -t "cloud" "DHCP file does not exist. Restarting dhclient"
-            DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
-            if [ -n $DHCLIENT_PID ]; then
-                  for CLIENTPID in $DHCLIENT_PID; do
-                    kill $CLIENTPID
-                  done
-            fi
-            /usr/sbin/dhclient
-        fi
-      done
-    fi
+
+    DHCLIENT=$(which dhclient)
+    for DHCP_FILE in $DHCP_FOLDERS; do
+      if [ -f $DHCP_FILE ]; then
+          logger -t "cloud" "DHCP file exists. No need to restart dhclient"
+      else
+          logger -t "cloud" "DHCP file does not exist. Restarting dhclient"
+          DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
+          if [ -n $DHCLIENT_PID ]; then
+                for CLIENTPID in $DHCLIENT_PID; do
+                  kill $CLIENTPID
+                done
+          fi
+          $DHCLIENT
+      fi
+    done
     
     password_received=0
     file_count=0
@@ -65,20 +64,20 @@ function cloud_set_guest_password() {
 
                     case $password in
                     
-                    "")					logger -t "cloud" "Password server at $PASSWORD_SERVER_IP did not have any password for the VM"
+                    "")         logger -t "cloud" "Password server at $PASSWORD_SERVER_IP did not have any password for the VM"
                                         continue
                                         ;;
                     
-                    "bad_request")		logger -t "cloud" "VM sent an invalid request to password server at $PASSWORD_SERVER_IP"
+                    "bad_request")    logger -t "cloud" "VM sent an invalid request to password server at $PASSWORD_SERVER_IP"
                                         error_count=$((error_count+1))
                                         continue
                                         ;;
                                         
-                    "saved_password") 	logger -t "cloud" "VM has already saved a password from the password server at $PASSWORD_SERVER_IP"
+                    "saved_password")   logger -t "cloud" "VM has already saved a password from the password server at $PASSWORD_SERVER_IP"
                                         continue
                                         ;;
                                         
-                    *)					logger -t "cloud" "VM got a valid password from server at $PASSWORD_SERVER_IP"
+                    *)          logger -t "cloud" "VM got a valid password from server at $PASSWORD_SERVER_IP"
                                         password_received=1
                                         break
                                         ;;
