--- a/templates/firstboot.systemd.j2
+++ b/templates/firstboot.systemd.j2
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/etc/init.d/firstboot-cloudstack
+ExecStart=/usr/share/cloudstack/cloudstack-firstboot
 
 [Install]
 WantedBy=multi-user.target
