--- a/templates/set-guest-password.upstart.j2
+++ b/templates/set-guest-password.upstart.j2
@@ -2,7 +2,8 @@
 
 description "set root password from CloudStack metadata"
 
-start on startup
+start on started network-services
 
-task
-exec /usr/share/cloudstack/cloudstack-set-guest-password start
+script
+  /usr/share/cloudstack/cloudstack-set-guest-password start
+end script
