--- a/templates/set-guest-sshkey.systemd.j2
+++ b/templates/set-guest-sshkey.systemd.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=CloudStack Guest SSH Key Reset
-After=network.target
+After=network.target local-fs.target
 
 [Service]
 Type=oneshot
