--- a/templates/set-guest-sshkey.upstart.j2
+++ b/templates/set-guest-sshkey.upstart.j2
@@ -2,7 +2,8 @@
 
 description "set root sshkeys from CloudStack metadata"
 
-start on startup
+start on started network-services
 
-task
-exec /usr/share/cloudstack/cloudstack-set-guest-sshkey start
+script
+  /usr/share/cloudstack/cloudstack-set-guest-sshkey start
+end script
