--- a/templates/cloud-set-guest-password-ubuntu.j2
+++ b/templates/cloud-set-guest-password-ubuntu.j2
@@ -18,101 +18,121 @@ set -e
 # Modify this line to specify the user (default is root)
 user=root
 
-# Add your DHCP lease folders here
-DHCP_FOLDERS="/var/lib/dhcp/* /var/lib/dhcp3/*"
+function find_lease() {
+  # Determine primary network adapter name
+  NIC=`ip link | grep UP | grep -v LOOPBACK | awk -F':' '{print $2}' | tr -d ' '`
+
+  # Add your DHCP lease folders here
+  if [ -f /etc/debian_version ]; then
+    # Ubuntu
+    #DHCP_FOLDERS="/var/lib/dhcpcd/dhcpcd-eth0.*"
+    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC* /var/lib/dhcp/*$NIC*"
+  elif [ -f /etc/redhat-release ]; then
+    # Redhat / CentOS / Scientific Linux
+    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
+  else
+    # Others
+    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
+  fi
+
+  DHCLIENT=$(which dhclient)
+  RESTART_DHCLIENT=true
+  for DHCP_FILE in $DHCP_FOLDERS; do
+    if [ -f $DHCP_FILE ]; then
+        LEASE_FILE=$DHCP_FILE
+        logger -t "cloud" "DHCP file ($LEASE_FILE) exists. No need to restart dhclient."
+        RESTART_DHCLIENT=false
+    fi
+  done
+
+  if [ $RESTART_DHCLIENT = true ]; then
+    logger -t "cloud" "DHCP file does not exist. Restarting dhclient."
+    DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
+    if [ -n $DHCLIENT_PID ]; then
+          for CLIENTPID in $DHCLIENT_PID; do
+            kill $CLIENTPID
+          done
+    fi
+    $DHCLIENT
+    find_lease
+  fi
+}
 
 function cloud_set_guest_password() {
-    password_received=0
-    file_count=0
-    error_count=0
 
-    DHCLIENT=$(which dhclient)
-    for DHCP_FILE in $DHCP_FOLDERS; do
-      if [ -f $DHCP_FILE ]; then
-          logger -t "cloud" "DHCP file exists. No need to restart dhclient"
+  find_lease
+  echo "Using DHCP lease from $LEASE_FILE"
+  password_received=0
+  file_count=0
+  error_count=0
+
+  file_count=$((file_count+1))
+  PASSWORD_SERVER_IP=$(grep dhcp-server-identifier $LEASE_FILE | tail -1 | awk '{print $NF}' | tr -d '\;')
+
+  if [ -n "$PASSWORD_SERVER_IP" ]; then
+      logger -t "cloud" "Found password server IP $PASSWORD_SERVER_IP in $LEASE_FILE"
+      logger -t "cloud" "Sending request to password server at $PASSWORD_SERVER_IP"
+      password=$(wget -q -t 3 -T 20 -O - --header "DomU_Request: send_my_password" $PASSWORD_SERVER_IP:8080)
+      password=$(echo $password | tr -d '\r')
+
+      if [ $? -eq 0 ]; then
+          logger -t "cloud" "Got response from server at $PASSWORD_SERVER_IP"
+
+          case $password in
+          "")
+              logger -t "cloud" "Password server at $PASSWORD_SERVER_IP did not have any password for the VM"
+              continue
+              ;;
+          "bad_request")
+              logger -t "cloud" "VM sent an invalid request to password server at $PASSWORD_SERVER_IP"
+              error_count=$((error_count+1))
+              continue
+              ;;
+          "saved_password")
+              logger -t "cloud" "VM has already saved a password from the password server at $PASSWORD_SERVER_IP"
+              continue
+              ;;
+          *)
+              logger -t "cloud" "VM got a valid password from server at $PASSWORD_SERVER_IP"
+              password_received=1
+              break
+              ;;
+          esac
       else
-          logger -t "cloud" "DHCP file does not exist. Restarting dhclient"
-          DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
-          if [ -n $DHCLIENT_PID ]; then
-                for CLIENTPID in $DHCLIENT_PID; do
-                  kill $CLIENTPID
-                done
-          fi
-          $DHCLIENT
+          logger -t "cloud" "Failed to send request to password server at $PASSWORD_SERVER_IP"
+          error_count=$((error_count+1))
       fi
-    done
+  else
+      logger -t "cloud" "Could not find password server IP in $LEASE_FILE"
+      error_count=$((error_count+1))
+  fi
 
-    for DHCP_FILE in $DHCP_FOLDERS; do
-        if [ -f $DHCP_FILE ]; then
-            file_count=$((file_count+1))
-            PASSWORD_SERVER_IP=$(grep dhcp-server-identifier $DHCP_FILE | tail -1 | awk '{print $NF}' | tr -d '\;')
+  if [ "$password_received" == "0" ]; then
+      if [ "$error_count" == "$file_count" ]; then
+          logger -t "cloud" "Failed to get password from any server"
+          exit 1
+      else
+          logger -t "cloud" "Did not need to change password."
+          exit 0
+      fi
+  fi
 
-            if [ -n "$PASSWORD_SERVER_IP" ]; then
-                logger -t "cloud" "Found password server IP $PASSWORD_SERVER_IP in $DHCP_FILE"
-                logger -t "cloud" "Sending request to password server at $PASSWORD_SERVER_IP"
-                password=$(wget -q -t 3 -T 20 -O - --header "DomU_Request: send_my_password" $PASSWORD_SERVER_IP:8080)
-                password=$(echo $password | tr -d '\r')
+  logger -t "cloud" "Changing password ..."
 
-                if [ $? -eq 0 ]; then
-                    logger -t "cloud" "Got response from server at $PASSWORD_SERVER_IP"
+  if [ -x /usr/sbin/chpasswd ]; then
+      echo "${user}:${password}" | chpasswd 
+  else
+      echo $password | passwd --stdin $user
+      if [ $? -gt 0 ]; then
+          logger -t "cloud" "Failed to change password for user $user"
+          exit 1
+      else
+          logger -t "cloud" "Successfully changed password for user $user"
+      fi
+  fi
 
-                    case $password in
-                    "")
-                        logger -t "cloud" "Password server at $PASSWORD_SERVER_IP did not have any password for the VM"
-                        continue
-                        ;;
-                    "bad_request")
-                        logger -t "cloud" "VM sent an invalid request to password server at $PASSWORD_SERVER_IP"
-                        error_count=$((error_count+1))
-                        continue
-                        ;;
-                    "saved_password")
-                        logger -t "cloud" "VM has already saved a password from the password server at $PASSWORD_SERVER_IP"
-                        continue
-                        ;;
-                    *)
-                        logger -t "cloud" "VM got a valid password from server at $PASSWORD_SERVER_IP"
-                        password_received=1
-                        break
-                        ;;
-                    esac
-                else
-                    logger -t "cloud" "Failed to send request to password server at $PASSWORD_SERVER_IP"
-                    error_count=$((error_count+1))
-                fi
-            else
-                logger -t "cloud" "Could not find password server IP in $DHCP_FILE"
-                error_count=$((error_count+1))
-            fi
-        fi
-    done
-
-    if [ "$password_received" == "0" ]; then
-        if [ "$error_count" == "$file_count" ]; then
-            logger -t "cloud" "Failed to get password from any server"
-            exit 1
-        else
-            logger -t "cloud" "Did not need to change password."
-            exit 0
-        fi
-    fi
-
-    logger -t "cloud" "Changing password ..."
-
-    if [ -x /usr/sbin/chpasswd ]; then
-        echo "${user}:${password}" | chpasswd 
-    else
-        echo $password | passwd --stdin $user
-        if [ $? -gt 0 ]; then
-            logger -t "cloud" "Failed to change password for user $user"
-            exit 1
-        else
-            logger -t "cloud" "Successfully changed password for user $user"
-        fi
-    fi
-
-    logger -t "cloud" "Sending acknowledgment to password server at $PASSWORD_SERVER_IP"
-    wget -t 3 -T 20 -O - --header "DomU_Request: saved_password" $PASSWORD_SERVER_IP:8080
+  logger -t "cloud" "Sending acknowledgment to password server at $PASSWORD_SERVER_IP"
+  wget -t 3 -T 20 -O - --header "DomU_Request: saved_password" $PASSWORD_SERVER_IP:8080
 }
 
 case "$1" in
