Trying to sort all this out.

--- a/templates/firstboot.upstart.j2
+++ b/templates/firstboot.upstart.j2
@@ -2,7 +2,7 @@
 
 description "set root sshkeys from CloudStack metadata"
 
-start on local-filesystems
+start on started network-services
 
 task
 exec /usr/share/cloudstack/cloudstack-firstboot start
