--- a/templates/cloud-set-guest-sshkey-centos.j2
+++ b/templates/cloud-set-guest-sshkey-centos.j2
@@ -23,45 +23,7 @@ user=root
 # Source function library.
 . /etc/rc.d/init.d/functions
 
-function find_lease() {
-  # Determine primary network adapter name
-  NIC=`ip link | grep UP | grep -v LOOPBACK | awk -F':' '{print $2}' | tr -d ' '`
-
-  # Add your DHCP lease folders here
-  if [ -f /etc/debian_version ]; then
-    # Ubuntu
-    #DHCP_FOLDERS="/var/lib/dhcpcd/dhcpcd-eth0.*"
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC* /var/lib/dhcp/*$NIC*"
-  elif [ -f /etc/redhat-release ]; then
-    # Redhat / CentOS / Scientific Linux
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
-  else
-    # Others
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
-  fi
-
-  DHCLIENT=$(which dhclient)
-  RESTART_DHCLIENT=true
-  for DHCP_FILE in $DHCP_FOLDERS; do
-    if [ -f $DHCP_FILE ]; then
-        LEASE_FILE=$DHCP_FILE
-        logger -t "cloud" "DHCP file ($LEASE_FILE) exists. No need to restart dhclient."
-        RESTART_DHCLIENT=false
-    fi
-  done
-
-  if [ $RESTART_DHCLIENT = true ]; then
-    logger -t "cloud" "DHCP file does not exist. Restarting dhclient."
-    DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
-    if [ -n $DHCLIENT_PID ]; then
-          for CLIENTPID in $DHCLIENT_PID; do
-            kill $CLIENTPID
-          done
-    fi
-    $DHCLIENT
-    find_lease
-  fi
-}
+. /usr/share/cloudstack/cloudstack-common-functions
 
 
 function cloud_set_guest_sshkey() {
@@ -81,7 +43,6 @@ function cloud_set_guest_sshkey() {
         if [ $? -eq 0 ]; then
             logger -t "cloud" "Got response from server at $SSHKEY_SERVER_IP"
             keys_received=1
-            break
         fi
     else
         logger -t "cloud" "Could not find ssh key server IP in $LEASE_FILE"
