--- a/templates/cloud-set-guest-sshkey-debian.j2
+++ b/templates/cloud-set-guest-sshkey-debian.j2
@@ -18,45 +18,7 @@ set -e
 # Modify this line to specify the user (default is root)
 user=root
 
-function find_lease() {
-  # Determine primary network adapter name
-  NIC=`ip link | grep UP | grep -v LOOPBACK | awk -F':' '{print $2}' | tr -d ' '`
-
-  # Add your DHCP lease folders here
-  if [ -f /etc/debian_version ]; then
-    # Ubuntu
-    #DHCP_FOLDERS="/var/lib/dhcpcd/dhcpcd-eth0.*"
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC* /var/lib/dhcp/*$NIC*"
-  elif [ -f /etc/redhat-release ]; then
-    # Redhat / CentOS / Scientific Linux
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
-  else
-    # Others
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
-  fi
-
-  DHCLIENT=$(which dhclient)
-  RESTART_DHCLIENT=true
-  for DHCP_FILE in $DHCP_FOLDERS; do
-    if [ -f $DHCP_FILE ]; then
-        LEASE_FILE=$DHCP_FILE
-        logger -t "cloud" "DHCP file ($LEASE_FILE) exists. No need to restart dhclient."
-        RESTART_DHCLIENT=false
-    fi
-  done
-
-  if [ $RESTART_DHCLIENT = true ]; then
-    logger -t "cloud" "DHCP file does not exist. Restarting dhclient."
-    DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
-    if [ -n $DHCLIENT_PID ]; then
-          for CLIENTPID in $DHCLIENT_PID; do
-            kill $CLIENTPID
-          done
-    fi
-    $DHCLIENT
-    find_lease
-  fi
-}
+. /usr/share/cloudstack/cloudstack-common-functions
 
 function cloud_set_guest_sshkey() {
 
@@ -75,7 +37,6 @@ function cloud_set_guest_sshkey() {
         if [ $? -eq 0 ]; then
             logger -t "cloud" "Got response from server at $SSHKEY_SERVER_IP"
             keys_received=1
-            break
         fi
     else
         logger -t "cloud" "Could not find ssh key server IP in $LEASE_FILE"
@@ -114,6 +75,11 @@ case "$1" in
       log_action_msg "Starting cloud" "cloud-set-guest-sshkey"
       sleep 10
       cloud_set_guest_sshkey
+      if [ $? -eq 0 ]; then
+          log_end_msg 0
+      else
+          log_end_msg 1
+      fi
       ;;
   stop)
       log_action_msg "Stopping cloud" "cloud-set-guest-sshkey"
