--- a/templates/firstboot-rhel.sh.j2
+++ b/templates/firstboot-rhel.sh.j2
@@ -14,45 +14,7 @@
 # Description:       Prepare new VM by flushing old information and preparing network environment
 ### END INIT INFO
 
-function find_lease() {
-  # Determine primary network adapter name
-  NIC=`ip link | grep UP | grep -v LOOPBACK | awk -F':' '{print $2}' | tr -d ' '`
-
-  # Add your DHCP lease folders here
-  if [ -f /etc/debian_version ]; then
-    # Ubuntu
-    #DHCP_FOLDERS="/var/lib/dhcpcd/dhcpcd-eth0.*"
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC* /var/lib/dhcp/*$NIC*"
-  elif [ -f /etc/redhat-release ]; then
-    # Redhat / CentOS / Scientific Linux
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
-  else
-    # Others
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
-  fi
-
-  DHCLIENT=$(which dhclient)
-  RESTART_DHCLIENT=true
-  for DHCP_FILE in $DHCP_FOLDERS; do
-    if [ -f $DHCP_FILE ]; then
-        LEASE_FILE=$DHCP_FILE
-        logger -t "cloud" "DHCP file ($LEASE_FILE) exists. No need to restart dhclient."
-        RESTART_DHCLIENT=false
-    fi
-  done
-
-  if [ $RESTART_DHCLIENT = true ]; then
-    logger -t "cloud" "DHCP file does not exist. Restarting dhclient."
-    DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
-    if [ -n $DHCLIENT_PID ]; then
-          for CLIENTPID in $DHCLIENT_PID; do
-            kill $CLIENTPID
-          done
-    fi
-    $DHCLIENT
-    find_lease
-  fi
-}
+. /usr/share/cloudstack/cloudstack-common-functions
 
 
 echo "Initializing Virtual Machine..."
@@ -83,9 +45,9 @@ echo "$IP      $HOST_NAME" >> /etc/hosts
 
 /usr/bin/yum clean all
 
-chkconfig firstboot-cloudstack off
+chkconfig cloudstack-firstboot off
 
 if [ -f /usr/bin/systemd-run ]
   then
-    systemctl disable firstboot-cloudstack
+    systemctl disable cloudstack-firstboot
   fi
