--- a/templates/cloud-set-guest-password-ubuntu.j2
+++ b/templates/cloud-set-guest-password-ubuntu.j2
@@ -18,45 +18,7 @@ set -e
 # Modify this line to specify the user (default is root)
 user=root
 
-function find_lease() {
-  # Determine primary network adapter name
-  NIC=`ip link | grep UP | grep -v LOOPBACK | awk -F':' '{print $2}' | tr -d ' '`
-
-  # Add your DHCP lease folders here
-  if [ -f /etc/debian_version ]; then
-    # Ubuntu
-    #DHCP_FOLDERS="/var/lib/dhcpcd/dhcpcd-eth0.*"
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC* /var/lib/dhcp/*$NIC*"
-  elif [ -f /etc/redhat-release ]; then
-    # Redhat / CentOS / Scientific Linux
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
-  else
-    # Others
-    DHCP_FOLDERS="/var/lib/dhclient/*$NIC* /var/lib/dhcp3/*$NIC*"
-  fi
-
-  DHCLIENT=$(which dhclient)
-  RESTART_DHCLIENT=true
-  for DHCP_FILE in $DHCP_FOLDERS; do
-    if [ -f $DHCP_FILE ]; then
-        LEASE_FILE=$DHCP_FILE
-        logger -t "cloud" "DHCP file ($LEASE_FILE) exists. No need to restart dhclient."
-        RESTART_DHCLIENT=false
-    fi
-  done
-
-  if [ $RESTART_DHCLIENT = true ]; then
-    logger -t "cloud" "DHCP file does not exist. Restarting dhclient."
-    DHCLIENT_PID=$(ps ax | grep dhclient | awk {'print $1'})
-    if [ -n $DHCLIENT_PID ]; then
-          for CLIENTPID in $DHCLIENT_PID; do
-            kill $CLIENTPID
-          done
-    fi
-    $DHCLIENT
-    find_lease
-  fi
-}
+. /usr/share/cloudstack/cloudstack-common-functions
 
 function cloud_set_guest_password() {
 
@@ -81,21 +43,17 @@ function cloud_set_guest_password() {
           case $password in
           "")
               logger -t "cloud" "Password server at $PASSWORD_SERVER_IP did not have any password for the VM"
-              continue
               ;;
           "bad_request")
               logger -t "cloud" "VM sent an invalid request to password server at $PASSWORD_SERVER_IP"
               error_count=$((error_count+1))
-              continue
               ;;
           "saved_password")
               logger -t "cloud" "VM has already saved a password from the password server at $PASSWORD_SERVER_IP"
-              continue
               ;;
           *)
               logger -t "cloud" "VM got a valid password from server at $PASSWORD_SERVER_IP"
               password_received=1
-              break
               ;;
           esac
       else
