--- a/templates/run-userdata.upstart.j2
+++ b/templates/run-userdata.upstart.j2
@@ -2,7 +2,8 @@
 
 description "set root sshkeys from CloudStack metadata"
 
-start on started network-services
+start on (startup and
+          started networking)
 
 task
 exec /usr/share/cloudstack/cloudstack-run-userdata start
