--- a/templates/set-guest-sshkey.upstart.j2
+++ b/templates/set-guest-sshkey.upstart.j2
@@ -2,8 +2,8 @@
 
 description "set root sshkeys from CloudStack metadata"
 
-start on started network-services
+start on (startup and
+          started networking)
 
-script
-  /usr/share/cloudstack/cloudstack-set-guest-sshkey start
-end script
+task
+exec /usr/share/cloudstack/cloudstack-set-guest-sshkey start
