--- a/templates/cloud-set-guest-password-centos.j2
+++ b/templates/cloud-set-guest-password-centos.j2
@@ -26,16 +26,14 @@ user=root
 . /usr/share/cloudstack/cloudstack-common-functions
 
 function cloud_set_guest_password() {
-
-  find_lease
-  echo "Using DHCP lease from $LEASE_FILE"
-      
+  sleep $[ 1 + $[ RANDOM % 10 ]]
+  find_lease    
   password_received=0
   file_count=0
   error_count=0
   if [ -f $LEASE_FILE ]; then
     file_count=$((file_count+1))
-    PASSWORD_SERVER_IP=$(grep dhcp-server-identifier $LEASE_FILE | tail -1 | awk '{print $NF}' | tr -d '\;')
+    PASSWORD_SERVER_IP=$(grep dhcp-server-identifier $LEASE_FILE | uniq | tail -1 | awk '{print $NF}' | tr -d '\;')
 
       if [ -n $PASSWORD_SERVER_IP ]; then
         logger -t "cloud" "Found password server IP $PASSWORD_SERVER_IP in $LEASE_FILE"
