--- a/templates/run-userdata.upstart.j2
+++ b/templates/run-userdata.upstart.j2
@@ -1,6 +1,6 @@
 # cloudstack-set-guest-sshkey
 
-description "set root sshkeys from CloudStack metadata"
+description "run userdata from CloudStack metadata"
 
 start on (startup and
           started networking)
