--- a/templates/cloud-common-functions.j2
+++ b/templates/cloud-common-functions.j2
@@ -1,5 +1,6 @@
 #!/bin/bash
 function find_lease() {
+
   # Determine primary network adapter name
   NIC=`ip link | grep UP | grep -v LOOPBACK | awk -F':' '{print $2}' | tr -d ' '`
 
@@ -25,7 +26,7 @@ function find_lease() {
   DHCLIENT=$(which dhclient)
   RESTART_DHCLIENT=true
 
-  if [ -e $LEASE_DIRECTORY/*$NIC* ]; then
+  if [ -e $LEASE_DIRECTORY/*-*$NIC* ]; then
         LEASE_FILE=$(ls $LEASE_DIRECTORY*$NIC*)
         logger -t "cloud" "DHCP file ($LEASE_FILE) exists. No need to restart dhclient."
         RESTART_DHCLIENT=false
