--- a/templates/firstboot.upstart.j2
+++ b/templates/firstboot.upstart.j2
@@ -1,6 +1,6 @@
 # cloudstack-set-guest-sshkey
 
-description "set root sshkeys from CloudStack metadata"
+description "Initial setup of instance."
 
 start on (startup and
           started networking)
