--- a/templates/set-guest-password.systemd.j2
+++ b/templates/set-guest-password.systemd.j2
@@ -1,6 +1,7 @@
 [Unit]
 Description=CloudStack Guest Password Reset
 After=network.target local-fs.target
+Before=sshd.service
 
 [Service]
 Type=oneshot
