--- a/templates/cloud-run-userdata-debian.j2
+++ b/templates/cloud-run-userdata-debian.j2
@@ -1,10 +1,11 @@
 #!/bin/bash
 ### BEGIN INIT INFO
 # Provides:          cloud-userdata
-# Required-Start:    $network $local_fs $remote_fs $syslog $all
-# Required-Stop:     $network $local_fs $remote_fs $syslog $all
+# Required-Start:    $network $local_fs $remote_fs $syslog
+# Required-Stop:     $network $local_fs $remote_fs $syslog
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
+# X-Start-Before:    $sshd
 # Short-Description: Download and run Cloud userdata
 # Description:       Downloads and executes any userdata specified when initializing the virtual machine.
 ### END INIT INFO
