--- a/templates/cloud-set-guest-sshkey-debian.j2
+++ b/templates/cloud-set-guest-sshkey-debian.j2
@@ -8,6 +8,7 @@
 # Required-Stop:        $local_fs $syslog $network
 # Default-Start:        2 3 4 5
 # Default-Stop:         0 1 6
+# X-Start-Before:       $sshd
 # Short-Description:    SSH Public Keys Download Client
 ### END INIT INFO
 
