--- a/templates/run-userdata.upstart.j2
+++ b/templates/run-userdata.upstart.j2
@@ -3,7 +3,8 @@
 description "run userdata from CloudStack metadata"
 
 start on (startup and
-          started networking)
+          started networking and
+          starting ssh)
 
 task
 exec /usr/share/cloudstack/cloudstack-run-userdata start
