--- a/templates/FreeBSD/cloud-sshkey-rc.j2
+++ b/templates/FreeBSD/cloud-sshkey-rc.j2
@@ -1,4 +1,8 @@
 #!/bin/sh
+# PROVIDE: cloudstack-set-guest-sshkey
+# REQUIRE: DAEMON networking
+# BEFORE:  LOGIN
+# KEYWORD: nojail
 
 . /etc/rc.subr
 
