--- a/templates/FreeBSD/cloud-set-guest-sshkey-freebsd.j2
+++ b/templates/FreeBSD/cloud-set-guest-sshkey-freebsd.j2
@@ -1,10 +1,5 @@
 #!/usr/local/bin/bash
-#
-# Init file for SSH Public Keys Download Client for FreeBSD
-#
-# chkconfig: 345 98 02
-# description: SSH Public Keys Download Client
-
+# FreeBSD
 # Modify this line to specify the user (default is root)
 user=root
 
