--- a/templates/wicked/cloud-set-guest-password.j2
+++ b/templates/wicked/cloud-set-guest-password.j2
@@ -33,7 +33,7 @@ function cloud_set_guest_password() {
   error_count=0
   if [ -f $LEASE_FILE ]; then
     file_count=$((file_count+1))
-    PASSWORD_SERVER_IP=$(grep dhcp-server-identifier $LEASE_FILE | uniq | tail -1 | awk '{print $NF}' | tr -d '\;')
+    PASSWORD_SERVER_IP=$(cat $LEASE_FILE | grep -oPm1 "(?<=<server-id>)[^<]+" | uniq)
 
       if [ -n $PASSWORD_SERVER_IP ]; then
         logger -t "cloud" "Found password server IP $PASSWORD_SERVER_IP in $LEASE_FILE"
@@ -109,7 +109,7 @@ case "$1" in
     $0 start
     ;;
   *) 
-    echo $"Usage: cloud-set-guest-sshey {start}"
+    echo $"Usage: cloud-set-guest-password {start}"
     RETVAL=2
     ;;
 esac
