--- a/templates/dhcpcd/cloud-set-guest-sshkey.j2
+++ b/templates/dhcpcd/cloud-set-guest-sshkey.j2
@@ -89,7 +89,7 @@ case "$1" in
       $0 start
       ;;
   *)
-      echo $"Usage: cloud-set-guest-sshey {start}"
+      echo $"Usage: cloud-set-guest-sshkey {start}"
       RETVAL=2
       ;;
 esac
