--- a/templates/dhclient/cloud-set-guest-password.j2
+++ b/templates/dhclient/cloud-set-guest-password.j2
@@ -108,12 +108,12 @@ function cloud_set_guest_password() {
 # See how we were called.
 case "$1" in
   start)
-    {{ function_caller }} $"Starting cloud-set-guest-password: " /bin/true
+    {{ function_caller }} $"Starting cloud-set-guest-password: "{% if function_caller == "action" %} /bin/true{% endif %}
     cloud_set_guest_password
     RETVAL=$?
     ;;
   stop)
-    {{ function_caller }} $"Shutting down cloud-set-guest-password: " /bin/true
+    {{ function_caller }} $"Shutting down cloud-set-guest-password: "{% if function_caller == "action" %} /bin/true{% endif %}
     RETVAL=$?
     ;;
   restart)
