--- a/templates/systemd/firstboot.systemd.j2
+++ b/templates/systemd/firstboot.systemd.j2
@@ -5,7 +5,7 @@ Before=sshd.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/share/cloudstack/cloudstack-firstboot
+ExecStart=/usr/share/cloudstack/cloudstack-firstboot start
 
 [Install]
 WantedBy=multi-user.target
